--- a/home.html
+++ b/home.html
@@ -270,7 +270,7 @@ font-weight: 600;
     </section>
     <section class="whyc">
       <h1>Why XYZ University ?</h1>
-      <p>idhar aao sudhar jao</p>
+      <p>Learn from the world's best</p>
       <div class="row">
         <div class="col-w">
           <h3>INNOVATIVE ACADEMICS</h3>
